--- a/Fincas.API/Fincas.API.csproj
+++ b/Fincas.API/Fincas.API.csproj
@@ -11,6 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Fincas.Common\Fincas.Common.csproj" />
+    <ProjectReference Include="..\Fincas.Domain\Fincas.Domain.csproj" />
   </ItemGroup>
 
 </Project>
