--- a/Fincas.API/Fincas.API.csproj
+++ b/Fincas.API/Fincas.API.csproj
@@ -11,10 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fincas.Backend\Fincas.Backend.csproj" />
     <ProjectReference Include="..\Fincas.Common\Fincas.Common.csproj" />
     <ProjectReference Include="..\Fincas.Domain\Fincas.Domain.csproj" />
   </ItemGroup>
